# macaw-auth

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: create_release.yaml  publish_release.yaml  publish_to_test_pypi.yaml  publish_to_testpypi.yaml  release_and_publish.yaml  run_pytest.yaml
examples/: config
src/macaw-auth/classes/: aws_credentials.py  configuration.py  errors.py  sts_saml.py  username_validation.py
src/macaw-auth/cli/: __main__.py
src/macaw_auth/: main.py
src/macaw_auth/classes/: aws_credentials.py  configuration.py  idp_connection.py  sts_saml.py  user_credentials.py  username_validation.py
src/macaw_auth/cli/: __main__.py  cli.py
src/macaw_auth/functions/: assume_role.py  common.py  login.py  web_logon.py
tests/: ..test_user_credentials.py  test_configurations.py  test_user_credentials.py  test_usernames.py
tests/test_files/: config  credentials
