[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "macaw-auth"
version = "2.1.0"
description = "Utility to authenticate to AWS Services via CLI using ADFS"
readme = "README.md"
authors = [
    { name="Travis Samuel", email="tsamuel@alum.mit.edu" },
]
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "requests_ntlm",
    "beautifulsoup4",
    "boto3",
    "keyring"
]

[project.urls]
"Homepage" = "https://github.com/tsamuel33/macaw-auth"
"Bug Tracker" = "https://github.com/tsamuel33/macaw-auth/issues"

[project.scripts]
macaw-auth = "macaw_auth.main:main"

[tool.setuptools]
include-package-data = true
license-files = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["macaw_auth*"]
namespaces = false
